miniC.output
Estado 68 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 program: VOID ID LPAREN RPAREN LKEY declarations statement_list RKEY

    2 declarations: declarations VAR identifier_list SEMICOLON
    3             | declarations CONST identifier_list SEMICOLON
    4             | %empty

    5 identifier_list: asig
    6                | identifier_list COMMA asig

    7 asig: ID
    8     | ID EQUALOP expression

    9 statement_list: statement_list statement
   10               | %empty

   11 statement: ID EQUALOP expression SEMICOLON
   12          | LKEY statement_list RKEY
   13          | IF LPAREN expression RPAREN statement ELSE statement
   14          | IF LPAREN expression RPAREN statement
   15          | WHILE LPAREN expression RPAREN statement
   16          | PRINT print_list SEMICOLON
   17          | READ read_list SEMICOLON

   18 print_list: print_item
   19           | print_list COMMA print_item

   20 print_item: expression
   21           | STRING

   22 read_list: ID
   23          | read_list COMMA ID

   24 expression: expression PLUSOP expression
   25           | expression MINUSOP expression
   26           | expression ASTERISKOP expression
   27           | expression SLASHOP expression
   28           | MINUSOP expression
   29           | LPAREN expression RPAREN
   30           | ID
   31           | NUM


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    VOID (258) 1
    VAR (259) 2
    CONST (260) 3
    IF (261) 13 14
    ELSE (262) 13
    WHILE (263) 15
    PRINT (264) 16
    READ (265) 17
    LPAREN (266) 1 13 14 15 29
    RPAREN (267) 1 13 14 15 29
    LKEY (268) 1 12
    RKEY (269) 1 12
    SEMICOLON (270) 2 3 11 16 17
    COMMA (271) 6 19 23
    EQUALOP (272) 8 11
    PLUSOP (273) 24
    MINUSOP (274) 25 28
    ASTERISKOP (275) 26
    SLASHOP (276) 27
    ID <cad> (277) 1 7 8 11 22 23 30
    NUM <cad> (278) 31
    STRING <cad> (279) 21


No terminales con las reglas donde aparecen

    $accept (25)
        on left: 0
    program (26)
        on left: 1
        on right: 0
    declarations (27)
        on left: 2 3 4
        on right: 1 2 3
    identifier_list (28)
        on left: 5 6
        on right: 2 3 6
    asig (29)
        on left: 7 8
        on right: 5 6
    statement_list (30)
        on left: 9 10
        on right: 1 9 12
    statement (31)
        on left: 11 12 13 14 15 16 17
        on right: 9 13 14 15
    print_list (32)
        on left: 18 19
        on right: 16 19
    print_item (33)
        on left: 20 21
        on right: 18 19
    read_list (34)
        on left: 22 23
        on right: 17 23
    expression (35)
        on left: 24 25 26 27 28 29 30 31
        on right: 8 11 13 14 15 20 24 25 26 27 28 29


Estado 0

    0 $accept: . program $end

    VOID  desplazar e ir al estado 1

    program  ir al estado 2


Estado 1

    1 program: VOID . ID LPAREN RPAREN LKEY declarations statement_list RKEY

    ID  desplazar e ir al estado 3


Estado 2

    0 $accept: program . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 program: VOID ID . LPAREN RPAREN LKEY declarations statement_list RKEY

    LPAREN  desplazar e ir al estado 5


Estado 4

    0 $accept: program $end .

    $default  aceptar


Estado 5

    1 program: VOID ID LPAREN . RPAREN LKEY declarations statement_list RKEY

    RPAREN  desplazar e ir al estado 6


Estado 6

    1 program: VOID ID LPAREN RPAREN . LKEY declarations statement_list RKEY

    LKEY  desplazar e ir al estado 7


Estado 7

    1 program: VOID ID LPAREN RPAREN LKEY . declarations statement_list RKEY

    $default  reduce usando la regla 4 (declarations)

    declarations  ir al estado 8


Estado 8

    1 program: VOID ID LPAREN RPAREN LKEY declarations . statement_list RKEY
    2 declarations: declarations . VAR identifier_list SEMICOLON
    3             | declarations . CONST identifier_list SEMICOLON

    VAR    desplazar e ir al estado 9
    CONST  desplazar e ir al estado 10

    $default  reduce usando la regla 10 (statement_list)

    statement_list  ir al estado 11


Estado 9

    2 declarations: declarations VAR . identifier_list SEMICOLON

    ID  desplazar e ir al estado 12

    identifier_list  ir al estado 13
    asig             ir al estado 14


Estado 10

    3 declarations: declarations CONST . identifier_list SEMICOLON

    ID  desplazar e ir al estado 12

    identifier_list  ir al estado 15
    asig             ir al estado 14


Estado 11

    1 program: VOID ID LPAREN RPAREN LKEY declarations statement_list . RKEY
    9 statement_list: statement_list . statement

    IF     desplazar e ir al estado 16
    WHILE  desplazar e ir al estado 17
    PRINT  desplazar e ir al estado 18
    READ   desplazar e ir al estado 19
    LKEY   desplazar e ir al estado 20
    RKEY   desplazar e ir al estado 21
    ID     desplazar e ir al estado 22

    statement  ir al estado 23


Estado 12

    7 asig: ID .
    8     | ID . EQUALOP expression

    EQUALOP  desplazar e ir al estado 24

    $default  reduce usando la regla 7 (asig)


Estado 13

    2 declarations: declarations VAR identifier_list . SEMICOLON
    6 identifier_list: identifier_list . COMMA asig

    SEMICOLON  desplazar e ir al estado 25
    COMMA      desplazar e ir al estado 26


Estado 14

    5 identifier_list: asig .

    $default  reduce usando la regla 5 (identifier_list)


Estado 15

    3 declarations: declarations CONST identifier_list . SEMICOLON
    6 identifier_list: identifier_list . COMMA asig

    SEMICOLON  desplazar e ir al estado 27
    COMMA      desplazar e ir al estado 26


Estado 16

   13 statement: IF . LPAREN expression RPAREN statement ELSE statement
   14          | IF . LPAREN expression RPAREN statement

    LPAREN  desplazar e ir al estado 28


Estado 17

   15 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  desplazar e ir al estado 29


Estado 18

   16 statement: PRINT . print_list SEMICOLON

    LPAREN   desplazar e ir al estado 30
    MINUSOP  desplazar e ir al estado 31
    ID       desplazar e ir al estado 32
    NUM      desplazar e ir al estado 33
    STRING   desplazar e ir al estado 34

    print_list  ir al estado 35
    print_item  ir al estado 36
    expression  ir al estado 37


Estado 19

   17 statement: READ . read_list SEMICOLON

    ID  desplazar e ir al estado 38

    read_list  ir al estado 39


Estado 20

   12 statement: LKEY . statement_list RKEY

    $default  reduce usando la regla 10 (statement_list)

    statement_list  ir al estado 40


Estado 21

    1 program: VOID ID LPAREN RPAREN LKEY declarations statement_list RKEY .

    $default  reduce usando la regla 1 (program)


Estado 22

   11 statement: ID . EQUALOP expression SEMICOLON

    EQUALOP  desplazar e ir al estado 41


Estado 23

    9 statement_list: statement_list statement .

    $default  reduce usando la regla 9 (statement_list)


Estado 24

    8 asig: ID EQUALOP . expression

    LPAREN   desplazar e ir al estado 30
    MINUSOP  desplazar e ir al estado 31
    ID       desplazar e ir al estado 32
    NUM      desplazar e ir al estado 33

    expression  ir al estado 42


Estado 25

    2 declarations: declarations VAR identifier_list SEMICOLON .

    $default  reduce usando la regla 2 (declarations)


Estado 26

    6 identifier_list: identifier_list COMMA . asig

    ID  desplazar e ir al estado 12

    asig  ir al estado 43


Estado 27

    3 declarations: declarations CONST identifier_list SEMICOLON .

    $default  reduce usando la regla 3 (declarations)


Estado 28

   13 statement: IF LPAREN . expression RPAREN statement ELSE statement
   14          | IF LPAREN . expression RPAREN statement

    LPAREN   desplazar e ir al estado 30
    MINUSOP  desplazar e ir al estado 31
    ID       desplazar e ir al estado 32
    NUM      desplazar e ir al estado 33

    expression  ir al estado 44


Estado 29

   15 statement: WHILE LPAREN . expression RPAREN statement

    LPAREN   desplazar e ir al estado 30
    MINUSOP  desplazar e ir al estado 31
    ID       desplazar e ir al estado 32
    NUM      desplazar e ir al estado 33

    expression  ir al estado 45


Estado 30

   29 expression: LPAREN . expression RPAREN

    LPAREN   desplazar e ir al estado 30
    MINUSOP  desplazar e ir al estado 31
    ID       desplazar e ir al estado 32
    NUM      desplazar e ir al estado 33

    expression  ir al estado 46


Estado 31

   28 expression: MINUSOP . expression

    LPAREN   desplazar e ir al estado 30
    MINUSOP  desplazar e ir al estado 31
    ID       desplazar e ir al estado 32
    NUM      desplazar e ir al estado 33

    expression  ir al estado 47


Estado 32

   30 expression: ID .

    $default  reduce usando la regla 30 (expression)


Estado 33

   31 expression: NUM .

    $default  reduce usando la regla 31 (expression)


Estado 34

   21 print_item: STRING .

    $default  reduce usando la regla 21 (print_item)


Estado 35

   16 statement: PRINT print_list . SEMICOLON
   19 print_list: print_list . COMMA print_item

    SEMICOLON  desplazar e ir al estado 48
    COMMA      desplazar e ir al estado 49


Estado 36

   18 print_list: print_item .

    $default  reduce usando la regla 18 (print_list)


Estado 37

   20 print_item: expression .
   24 expression: expression . PLUSOP expression
   25           | expression . MINUSOP expression
   26           | expression . ASTERISKOP expression
   27           | expression . SLASHOP expression

    PLUSOP      desplazar e ir al estado 50
    MINUSOP     desplazar e ir al estado 51
    ASTERISKOP  desplazar e ir al estado 52
    SLASHOP     desplazar e ir al estado 53

    $default  reduce usando la regla 20 (print_item)


Estado 38

   22 read_list: ID .

    $default  reduce usando la regla 22 (read_list)


Estado 39

   17 statement: READ read_list . SEMICOLON
   23 read_list: read_list . COMMA ID

    SEMICOLON  desplazar e ir al estado 54
    COMMA      desplazar e ir al estado 55


Estado 40

    9 statement_list: statement_list . statement
   12 statement: LKEY statement_list . RKEY

    IF     desplazar e ir al estado 16
    WHILE  desplazar e ir al estado 17
    PRINT  desplazar e ir al estado 18
    READ   desplazar e ir al estado 19
    LKEY   desplazar e ir al estado 20
    RKEY   desplazar e ir al estado 56
    ID     desplazar e ir al estado 22

    statement  ir al estado 23


Estado 41

   11 statement: ID EQUALOP . expression SEMICOLON

    LPAREN   desplazar e ir al estado 30
    MINUSOP  desplazar e ir al estado 31
    ID       desplazar e ir al estado 32
    NUM      desplazar e ir al estado 33

    expression  ir al estado 57


Estado 42

    8 asig: ID EQUALOP expression .
   24 expression: expression . PLUSOP expression
   25           | expression . MINUSOP expression
   26           | expression . ASTERISKOP expression
   27           | expression . SLASHOP expression

    PLUSOP      desplazar e ir al estado 50
    MINUSOP     desplazar e ir al estado 51
    ASTERISKOP  desplazar e ir al estado 52
    SLASHOP     desplazar e ir al estado 53

    $default  reduce usando la regla 8 (asig)


Estado 43

    6 identifier_list: identifier_list COMMA asig .

    $default  reduce usando la regla 6 (identifier_list)


Estado 44

   13 statement: IF LPAREN expression . RPAREN statement ELSE statement
   14          | IF LPAREN expression . RPAREN statement
   24 expression: expression . PLUSOP expression
   25           | expression . MINUSOP expression
   26           | expression . ASTERISKOP expression
   27           | expression . SLASHOP expression

    RPAREN      desplazar e ir al estado 58
    PLUSOP      desplazar e ir al estado 50
    MINUSOP     desplazar e ir al estado 51
    ASTERISKOP  desplazar e ir al estado 52
    SLASHOP     desplazar e ir al estado 53


Estado 45

   15 statement: WHILE LPAREN expression . RPAREN statement
   24 expression: expression . PLUSOP expression
   25           | expression . MINUSOP expression
   26           | expression . ASTERISKOP expression
   27           | expression . SLASHOP expression

    RPAREN      desplazar e ir al estado 59
    PLUSOP      desplazar e ir al estado 50
    MINUSOP     desplazar e ir al estado 51
    ASTERISKOP  desplazar e ir al estado 52
    SLASHOP     desplazar e ir al estado 53


Estado 46

   24 expression: expression . PLUSOP expression
   25           | expression . MINUSOP expression
   26           | expression . ASTERISKOP expression
   27           | expression . SLASHOP expression
   29           | LPAREN expression . RPAREN

    RPAREN      desplazar e ir al estado 60
    PLUSOP      desplazar e ir al estado 50
    MINUSOP     desplazar e ir al estado 51
    ASTERISKOP  desplazar e ir al estado 52
    SLASHOP     desplazar e ir al estado 53


Estado 47

   24 expression: expression . PLUSOP expression
   25           | expression . MINUSOP expression
   26           | expression . ASTERISKOP expression
   27           | expression . SLASHOP expression
   28           | MINUSOP expression .

    ASTERISKOP  desplazar e ir al estado 52
    SLASHOP     desplazar e ir al estado 53

    $default  reduce usando la regla 28 (expression)


Estado 48

   16 statement: PRINT print_list SEMICOLON .

    $default  reduce usando la regla 16 (statement)


Estado 49

   19 print_list: print_list COMMA . print_item

    LPAREN   desplazar e ir al estado 30
    MINUSOP  desplazar e ir al estado 31
    ID       desplazar e ir al estado 32
    NUM      desplazar e ir al estado 33
    STRING   desplazar e ir al estado 34

    print_item  ir al estado 61
    expression  ir al estado 37


Estado 50

   24 expression: expression PLUSOP . expression

    LPAREN   desplazar e ir al estado 30
    MINUSOP  desplazar e ir al estado 31
    ID       desplazar e ir al estado 32
    NUM      desplazar e ir al estado 33

    expression  ir al estado 62


Estado 51

   25 expression: expression MINUSOP . expression

    LPAREN   desplazar e ir al estado 30
    MINUSOP  desplazar e ir al estado 31
    ID       desplazar e ir al estado 32
    NUM      desplazar e ir al estado 33

    expression  ir al estado 63


Estado 52

   26 expression: expression ASTERISKOP . expression

    LPAREN   desplazar e ir al estado 30
    MINUSOP  desplazar e ir al estado 31
    ID       desplazar e ir al estado 32
    NUM      desplazar e ir al estado 33

    expression  ir al estado 64


Estado 53

   27 expression: expression SLASHOP . expression

    LPAREN   desplazar e ir al estado 30
    MINUSOP  desplazar e ir al estado 31
    ID       desplazar e ir al estado 32
    NUM      desplazar e ir al estado 33

    expression  ir al estado 65


Estado 54

   17 statement: READ read_list SEMICOLON .

    $default  reduce usando la regla 17 (statement)


Estado 55

   23 read_list: read_list COMMA . ID

    ID  desplazar e ir al estado 66


Estado 56

   12 statement: LKEY statement_list RKEY .

    $default  reduce usando la regla 12 (statement)


Estado 57

   11 statement: ID EQUALOP expression . SEMICOLON
   24 expression: expression . PLUSOP expression
   25           | expression . MINUSOP expression
   26           | expression . ASTERISKOP expression
   27           | expression . SLASHOP expression

    SEMICOLON   desplazar e ir al estado 67
    PLUSOP      desplazar e ir al estado 50
    MINUSOP     desplazar e ir al estado 51
    ASTERISKOP  desplazar e ir al estado 52
    SLASHOP     desplazar e ir al estado 53


Estado 58

   13 statement: IF LPAREN expression RPAREN . statement ELSE statement
   14          | IF LPAREN expression RPAREN . statement

    IF     desplazar e ir al estado 16
    WHILE  desplazar e ir al estado 17
    PRINT  desplazar e ir al estado 18
    READ   desplazar e ir al estado 19
    LKEY   desplazar e ir al estado 20
    ID     desplazar e ir al estado 22

    statement  ir al estado 68


Estado 59

   15 statement: WHILE LPAREN expression RPAREN . statement

    IF     desplazar e ir al estado 16
    WHILE  desplazar e ir al estado 17
    PRINT  desplazar e ir al estado 18
    READ   desplazar e ir al estado 19
    LKEY   desplazar e ir al estado 20
    ID     desplazar e ir al estado 22

    statement  ir al estado 69


Estado 60

   29 expression: LPAREN expression RPAREN .

    $default  reduce usando la regla 29 (expression)


Estado 61

   19 print_list: print_list COMMA print_item .

    $default  reduce usando la regla 19 (print_list)


Estado 62

   24 expression: expression . PLUSOP expression
   24           | expression PLUSOP expression .
   25           | expression . MINUSOP expression
   26           | expression . ASTERISKOP expression
   27           | expression . SLASHOP expression

    ASTERISKOP  desplazar e ir al estado 52
    SLASHOP     desplazar e ir al estado 53

    $default  reduce usando la regla 24 (expression)


Estado 63

   24 expression: expression . PLUSOP expression
   25           | expression . MINUSOP expression
   25           | expression MINUSOP expression .
   26           | expression . ASTERISKOP expression
   27           | expression . SLASHOP expression

    ASTERISKOP  desplazar e ir al estado 52
    SLASHOP     desplazar e ir al estado 53

    $default  reduce usando la regla 25 (expression)


Estado 64

   24 expression: expression . PLUSOP expression
   25           | expression . MINUSOP expression
   26           | expression . ASTERISKOP expression
   26           | expression ASTERISKOP expression .
   27           | expression . SLASHOP expression

    $default  reduce usando la regla 26 (expression)


Estado 65

   24 expression: expression . PLUSOP expression
   25           | expression . MINUSOP expression
   26           | expression . ASTERISKOP expression
   27           | expression . SLASHOP expression
   27           | expression SLASHOP expression .

    $default  reduce usando la regla 27 (expression)


Estado 66

   23 read_list: read_list COMMA ID .

    $default  reduce usando la regla 23 (read_list)


Estado 67

   11 statement: ID EQUALOP expression SEMICOLON .

    $default  reduce usando la regla 11 (statement)


Estado 68

   13 statement: IF LPAREN expression RPAREN statement . ELSE statement
   14          | IF LPAREN expression RPAREN statement .

    ELSE  desplazar e ir al estado 70

    ELSE      [reduce usando la regla 14 (statement)]
    $default  reduce usando la regla 14 (statement)


Estado 69
